# dj-s3-client

./: .env  .gitignore  Cargo.toml  config.yaml  s3.config
src/: analysis.rs  client.rs  config.rs  error.rs  etl-obj.rs  lib.rs  main.rs  response.rs
