[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s3_client"
path = "src/lib.rs"

[[bin]]
name = "s3_client"
path = "src/main.rs"

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
eyre = "0.6.8"
lazy_static = "1.4.0"
rust-s3 = { version = "0.33.0" }
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.1"
