[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s3_client"
path = "src/lib.rs"

[[bin]]
name = "s3_client"
path = "src/main.rs"

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
color-eyre = "0.6.2"
config = "0.13.3"
dotenv = "0.15.0"
eyre = "0.6.8"
lazy_static = "1.4.0"
pin-project-lite = "0.2.13"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tower-service = "0.3.2"
tracing = "0.1.37"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter", "fmt", "json"]

[dependencies.url]
version = "2.4.1"
features = ["serde"]
